add radial distance to config

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 TELEGRAM_API_TOKEN=
 OPENCAGE_API_KEY=
 CHECKWX_API_KEY=
+RADIAL_DISTANCE=
 YC_IMAGE_REGISTRY_ID=
 SERVICE_ACCOUNT_ID=
 SERVERLESS_CONTAINER_EXEC_TIMEOUT=
